--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#bep" class="nav__link">BEP</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#board" class="nav__link">Board</a>
+                    <a href="#team" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
                     <a href="#partners" class="nav__link">Partners</a>
@@ -146,100 +146,225 @@
         </div>
     </section>
 
-    <!-- Board Section -->
-    <section id="board" class="board">
+    <!-- Team Section -->
+    <section id="team" class="board">
         <div class="container">
-            <h2 class="section__title">Our Board</h2>
-            <p class="board__description">Meet the dedicated leaders driving BCC's vision and fostering excellence in business education at IIT Delhi.</p>
+            <h2 class="section__title">Our Team</h2>
+            <p class="board__description">Meet our dedicated team members driving BCC's vision and fostering excellence in business education at IIT Delhi.</p>
             
-            <div class="board__grid">
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">AS</span>
+            <!-- Core Team -->
+            <div class="team__section">
+                <h3 class="team__section-title">Core Team</h3>
+                <div class="board__grid">
+                    <div class="board-member">
+                        <div class="board-member__avatar">
+                            <span class="board-member__initials">DM</span>
+                        </div>
+                        <div class="board-member__info">
+                            <h3 class="board-member__name">Dhruv Malhotra</h3>
+                            <p class="board-member__position">President</p>
+                            <p class="board-member__description">Leading BCC's vision and strategic direction</p>
+                        </div>
                     </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Arjun Sharma</h3>
-                        <p class="board-member__position">President</p>
-                        <p class="board-member__description">Leading BCC's vision and strategic direction</p>
+
+                    <div class="board-member">
+                        <div class="board-member__avatar">
+                            <span class="board-member__initials">SM</span>
+                        </div>
+                        <div class="board-member__info">
+                            <h3 class="board-member__name">Shiv Malhotra</h3>
+                            <p class="board-member__position">Vice President</p>
+                            <p class="board-member__description">Overseeing operations and strategic initiatives</p>
+                        </div>
+                    </div>
+
+                    <div class="board-member">
+                        <div class="board-member__avatar">
+                            <span class="board-member__initials">RB</span>
+                        </div>
+                        <div class="board-member__info">
+                            <h3 class="board-member__name">Ria Barodia</h3>
+                            <p class="board-member__position">Vice President</p>
+                            <p class="board-member__description">Managing partnerships and member development</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Senior Team -->
+            <div class="team__section">
+                <h3 class="team__section-title">Senior Team</h3>
+                
+                <!-- Startup Coordinators -->
+                <div class="team__subsection">
+                    <div class="board__grid">
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">AA</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Aadish</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Fostering startup culture and innovation</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">RA</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Rayna</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Supporting entrepreneurial initiatives</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">SU</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Subodh</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Driving startup projects and collaborations</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">HA</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Harshit</h3>
+                                <p class="board-member__position">Startup Coordinator</p>
+                                <p class="board-member__description">Leading innovation and startup mentorship</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">DI</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Dishit</h3>
+                                <p class="board-member__position">Marketing Coordinator</p>
+                                <p class="board-member__description">Building brand presence and digital marketing</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">SH</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Shashwat</h3>
+                                <p class="board-member__position">Marketing Coordinator</p>
+                                <p class="board-member__description">Managing marketing campaigns and strategies</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">SA</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Satyam</h3>
+                                <p class="board-member__position">Outreach Coordinator</p>
+                                <p class="board-member__description">Building external partnerships and collaborations</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">AV</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Avin</h3>
+                                <p class="board-member__position">Outreach Coordinator</p>
+                                <p class="board-member__description">Managing industry connections and networking</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">DP</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Dipen</h3>
+                                <p class="board-member__position">Outreach Coordinator</p>
+                                <p class="board-member__description">Facilitating external engagement and relations</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">AVI</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Aviral</h3>
+                                <p class="board-member__position">Outreach Coordinator</p>
+                                <p class="board-member__description">Expanding outreach initiatives and partnerships</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">KR</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Krish</h3>
+                                <p class="board-member__position">Event Coordinator</p>
+                                <p class="board-member__description">Planning and executing club events</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">RO</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Rohan</h3>
+                                <p class="board-member__position">Event Coordinator</p>
+                                <p class="board-member__description">Managing event logistics and coordination</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">UR</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Urvi</h3>
+                                <p class="board-member__position">Event Coordinator</p>
+                                <p class="board-member__description">Organizing workshops and networking events</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">DIS</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Disha</h3>
+                                <p class="board-member__position">Event Coordinator</p>
+                                <p class="board-member__description">Leading event planning and execution</p>
+                            </div>
+                        </div>
+
+                        <div class="board-member">
+                            <div class="board-member__avatar">
+                                <span class="board-member__initials">AP</span>
+                            </div>
+                            <div class="board-member__info">
+                                <h3 class="board-member__name">Aparna</h3>
+                                <p class="board-member__position">Design Coordinator</p>
+                                <p class="board-member__description">Creating visual content and brand materials</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">PP</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Priya Patel</h3>
-                        <p class="board-member__position">Vice President</p>
-                        <p class="board-member__description">Overseeing operations and member development</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">RK</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Rahul Kumar</h3>
-                        <p class="board-member__position">Finance Head</p>
-                        <p class="board-member__description">Managing club finances and investment initiatives</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">SG</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Sneha Gupta</h3>
-                        <p class="board-member__position">Consulting Head</p>
-                        <p class="board-member__description">Leading consulting projects and industry partnerships</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">VS</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Vikram Singh</h3>
-                        <p class="board-member__position">Entrepreneurship Head</p>
-                        <p class="board-member__description">Fostering startup culture and innovation</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">AJ</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Ananya Joshi</h3>
-                        <p class="board-member__position">Secretary</p>
-                        <p class="board-member__description">Managing communications and events</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">KR</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Karthik Reddy</h3>
-                        <p class="board-member__position">Marketing Head</p>
-                        <p class="board-member__description">Building brand presence and outreach</p>
-                    </div>
-                </div>
-
-                <div class="board-member">
-                    <div class="board-member__avatar">
-                        <span class="board-member__initials">IM</span>
-                    </div>
-                    <div class="board-member__info">
-                        <h3 class="board-member__name">Ishita Mehta</h3>
-                        <p class="board-member__position">Treasurer</p>
-                        <p class="board-member__description">Financial planning and budget management</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -282,7 +407,7 @@
                     <a href="#home">Home</a>
                     <a href="#initiatives">Initiatives</a>
                     <a href="#bep">BEP</a>
-                    <a href="#board">Board</a>
+                    <a href="#team">Team</a>
                     <a href="#partners">Partners</a>
                     <a href="#contact">Contact</a>
                 </div>
