--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <header class="header">
         <nav class="nav">
             <div class="nav__brand">
-                <h2>BCC IIT Delhi</h2>
+                <h2>BnC IIT Delhi</h2>
             </div>
             <ul class="nav__menu" id="nav-menu">
                 <li class="nav__item">
                     <a href="#home" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#initiatives" class="nav__link">Initiatives</a>
+                    <a href="#initiatives" class="nav__link">Events</a>
                 </li>
                 <li class="nav__item">
                     <a href="#bep" class="nav__link">BEP</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#board" class="nav__link">Board</a>
+                    <a href="#board" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
                     <a href="#partners" class="nav__link">Partners</a>
@@ -106,59 +106,19 @@
         </div>
     </section>
 
-    <!-- Board Education Program Section -->
-    <section id="bep" class="bep">
-        <div class="container">
-            <div class="bep__content">
-                <h2 class="section__title">Board Education Program</h2>
-                <p class="bep__description">New club members learn fundamental business concepts in finance, consulting, and entrepreneurship during our intensive semester-long program.</p>
-                
-                <div class="bep__benefits">
-                    <h3 class="bep__benefits-title">Program Benefits</h3>
-                    <div class="benefits-grid">
-                        <div class="benefit-item">
-                            <h4>Fundamental Business Concepts</h4>
-                            <p>Learn core principles across finance, consulting, and entrepreneurship</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Hands-on Projects</h4>
-                            <p>Apply knowledge through real-world business challenges</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Professional Presentations</h4>
-                            <p>Develop presentation skills through project showcases</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Industry Exposure</h4>
-                            <p>Connect with industry professionals and gain insights</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Networking Opportunities</h4>
-                            <p>Build connections with peers and industry leaders</p>
-                        </div>
-                        <div class="benefit-item">
-                            <h4>Skill Development</h4>
-                            <p>Enhance analytical and problem-solving capabilities</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Board Section -->
     <section id="board" class="board">
         <div class="container">
-            <h2 class="section__title">Our Board</h2>
+            <h2 class="section__title">Our Team</h2>
             <p class="board__description">Meet the dedicated leaders driving BCC's vision and fostering excellence in business education at IIT Delhi.</p>
             
             <div class="board__grid">
                 <div class="board-member">
                     <div class="board-member__avatar">
-                        <span class="board-member__initials">AS</span>
+                        <span class="board-member__initials">DM</span>
                     </div>
                     <div class="board-member__info">
-                        <h3 class="board-member__name">Arjun Sharma</h3>
+                        <h3 class="board-member__name">Dhruv Malhotra</h3>
                         <p class="board-member__position">President</p>
                         <p class="board-member__description">Leading BCC's vision and strategic direction</p>
                     </div>
@@ -280,9 +240,9 @@
                 </div>
                 <div class="footer__links">
                     <a href="#home">Home</a>
-                    <a href="#initiatives">Initiatives</a>
+                    <a href="#initiatives">Events</a>
                     <a href="#bep">BEP</a>
-                    <a href="#board">Board</a>
+                    <a href="#board">Team</a>
                     <a href="#partners">Partners</a>
                     <a href="#contact">Contact</a>
                 </div>
