--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#team" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#partners" class="nav__link">Partners</a>
+                    <a href="#clients" class="nav__link">Clients</a>
                 </li>
                 <li class="nav__item">
                     <a href="#contact" class="nav__link">Contact</a>
@@ -369,13 +369,42 @@
         </div>
     </section>
 
-    <!-- Partners Section -->
-    <section id="partners" class="partners">
+    <!-- Clients Section -->
+    <section id="clients" class="clients">
         <div class="container">
-            <h2 class="section__title">Our Partners</h2>
-            <p class="partners__description">We collaborate with leading organizations to provide our members with exceptional opportunities and industry exposure.</p>
-            <div class="partners__grid">
-                <div class="partner-placeholder">Partner Logos Coming Soon</div>
+            <h2 class="section__title">Our Clients</h2>
+            <p class="clients__description">Hear what our clients say about their experience working with BnC, IIT Delhi.</p>
+            
+            <div class="testimonials__grid">
+                <div class="testimonial-card">
+                    <div class="testimonial__content">
+                        <p class="testimonial__quote">"Working with BnC, IIT Delhi has always been a pleasure. Their professionalism, efficiency, and ability to deliver high-quality work under tight deadlines truly stand out."</p>
+                    </div>
+                    <div class="testimonial__author">
+                        <h4 class="testimonial__name">Mr. Aman Singh</h4>
+                        <p class="testimonial__title">Founder, SayF</p>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial__content">
+                        <p class="testimonial__quote">"The team's market research gave us clear, actionable insights and helped us identify promising new product opportunities."</p>
+                    </div>
+                    <div class="testimonial__author">
+                        <h4 class="testimonial__name">Mr. Prudhvi Varma</h4>
+                        <p class="testimonial__title">Founder, ZOLVE</p>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial__content">
+                        <p class="testimonial__quote">"It was a great experience with all of you. We would want to continue working for few more interesting assignments with BnC IITD in near future."</p>
+                    </div>
+                    <div class="testimonial__author">
+                        <h4 class="testimonial__name">Mr. Kirtiman Mishra</h4>
+                        <p class="testimonial__title">Founder, WorldRef</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -408,7 +437,7 @@
                     <a href="#initiatives">Events</a>
                     <a href="#bep">BEP</a>
                     <a href="#team">Team</a>
-                    <a href="#partners">Partners</a>
+                    <a href="#clients">Clients</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
