--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <li class="nav__item">
                     <a href="#initiatives" class="nav__link">Events</a>
                 </li>
-                <li class="nav__item">
-                    <a href="#bep" class="nav__link">BEP</a>
+                <!-- <li class="nav__item">
+                    <a href="#bep" class="nav__link">BEP</a> -->
                 </li>
                 <li class="nav__item">
                     <a href="#team" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#partners" class="nav__link">Partners</a>
+                    <a href="#partners" class="nav__link">Clients</a>
                 </li>
                 <li class="nav__item">
                     <a href="#contact" class="nav__link">Contact</a>
@@ -56,19 +56,19 @@
     <!-- Initiatives Section -->
     <section id="initiatives" class="initiatives">
         <div class="container">
-            <h2 class="section__title">Our Initiatives</h2>
+            <h2 class="section__title">Business Strategies</h2>
             <div class="initiatives__grid">
                 <div class="initiative-card">
                     <div class="initiative-card__header initiative-card__header--finance">
-                        <h3 class="initiative-card__title">Finance</h3>
+                        <h3 class="initiative-card__title">Business Strategies</h3>
                     </div>
                     <div class="initiative-card__body">
-                        <p class="initiative-card__description">Members in the Finance Initiative participate in mock trading and an educational program comprising the fundamentals of valuation, global markets, economics, and trading.</p>
+                        <p class="initiative-card__description">Our business strategies focus on fostering innovation, collaboration, and sustainable growth. We strive to create unique value for our members through skill-development workshops, hands-on projects, and industry exposure while building strong networks with alumni and partners.</p>
                         <ul class="initiative-card__activities">
-                            <li>Mock Trading</li>
-                            <li>Valuation Analysis</li>
-                            <li>Market Research</li>
-                            <li>Investment Strategies</li>
+                            <li>Innovation First</li>
+                            <li>Collaboration & Networking</li>
+                            <li>Sustainability & Growth</li>
+                            <li>Community Impact</li>
                         </ul>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    <!-- Board Education Program Section -->
+    <!-- Board Education Program Section
     <section id="bep" class="bep">
         <div class="container">
             <div class="bep__content">
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Team Section -->
     <section id="team" class="board">
@@ -372,7 +372,7 @@
     <!-- Partners Section -->
     <section id="partners" class="partners">
         <div class="container">
-            <h2 class="section__title">Our Partners</h2>
+            <h2 class="section__title">Our Clients</h2>
             <p class="partners__description">We collaborate with leading organizations to provide our members with exceptional opportunities and industry exposure.</p>
             <div class="partners__grid">
                 <div class="partner-placeholder">Partner Logos Coming Soon</div>
@@ -387,7 +387,7 @@
             <div class="contact__content">
                 <div class="contact__info">
                     <h3>Contact Information</h3>
-                    <p><strong>Email:</strong> <a href="mailto:bcc-exec@iitd.ac.in">bcc-exec@iitd.ac.in</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:bnc.iitdelhi@gmail.com">bnc.iitdelhi@gmail.com</a></p>
                     <p><strong>Location:</strong> IIT Delhi Campus, New Delhi</p>
                     <p class="contact__message">Interested in partnering with us to promote business at IIT Delhi?</p>
                 </div>
@@ -408,7 +408,7 @@
                     <a href="#initiatives">Events</a>
                     <a href="#bep">BEP</a>
                     <a href="#team">Team</a>
-                    <a href="#partners">Partners</a>
+                    <a href="#partners">Clients</a>
                     <a href="#contact">Contact</a>
                 </div>
             </div>
