organised images and added team images

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="board__grid">
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">AA</span>
+                                <img src="images/team/aadish.png" alt="Aadish" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Aadish</h3>
@@ -211,7 +211,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">RA</span>
+                                <img src="images/team/rayna.png" alt="Rayna" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Rayna</h3>
@@ -222,7 +222,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">SU</span>
+                                <img src="images/team/subodh.png" alt="Subodh" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Subodh</h3>
@@ -244,7 +244,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">DI</span>
+                                <img src="images/team/dishit.png" alt="Dishit" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Dishit</h3>
@@ -266,7 +266,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">SA</span>
+                                <img src="images/team/satyam.png" alt="Satyam" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Satyam</h3>
@@ -277,7 +277,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">AV</span>
+                                <img src="images/team/avin.png" alt="Avin" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Avin</h3>
@@ -288,7 +288,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">DP</span>
+                                <img src="images/team/dipen.png" alt="Dipen" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Dipen</h3>
@@ -299,7 +299,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">AVI</span>
+                                <img src="images/team/aviral.png" alt="Aviral" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Aviral</h3>
@@ -310,7 +310,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">KR</span>
+                                <img src="images/team/krish.png" alt="Krish" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Krish</h3>
@@ -321,7 +321,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">RO</span>
+                                <img src="images/team/rohan.png" alt="Rohan" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Rohan</h3>
@@ -332,7 +332,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">UR</span>
+                                <img src="images/team/urvi.png" alt="Urvi" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Urvi</h3>
@@ -343,7 +343,7 @@
 
                         <div class="board-member">
                             <div class="board-member__avatar">
-                                <span class="board-member__initials">DIS</span>
+                                <img src="images/team/disha.png" alt="Disha" class="board-member__photo">
                             </div>
                             <div class="board-member__info">
                                 <h3 class="board-member__name">Disha</h3>
