--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li class="nav__item">
                     <a href="#initiatives" class="nav__link">Events</a>
                 </li>
-                <li class="nav__item">
-                    <a href="#bep" class="nav__link">BEP</a>
+                <!-- <li class="nav__item">
+                    <a href="#bep" class="nav__link">BEP</a> -->
                 </li>
                 <li class="nav__item">
                     <a href="#team" class="nav__link">Team</a>
@@ -435,7 +435,7 @@
                 <div class="footer__links">
                     <a href="#home">Home</a>
                     <a href="#initiatives">Events</a>
-                    <a href="#bep">BEP</a>
+                    <!-- <a href="#bep">BEP</a> -->
                     <a href="#team">Team</a>
                     <a href="#clients">Clients</a>
                     <a href="#contact">Contact</a>
