clients header fixed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#team" class="nav__link">Team</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#partners" class="nav__link">Clients</a>
+                    <a href="#clients" class="nav__link">Clients</a>
                 </li>
                 <li class="nav__item">
                     <a href="#contact" class="nav__link">Contact</a>
@@ -150,7 +150,7 @@
     <section id="team" class="board">
         <div class="container">
             <h2 class="section__title">Our Team</h2>
-            <p class="board__description">Meet our dedicated team members driving BCC's vision and fostering excellence in business education at IIT Delhi.</p>
+            <p class="board__description">Meet our dedicated team members driving BnC's vision and fostering excellence in business education at IIT Delhi.</p>
             
             <!-- Core Team -->
             <div class="team__section">
