--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="board__grid">
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">DM</span>
+                            <img src="images/dhruv.png" alt="dhruv" class="board-member__photo">
                         </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Dhruv Malhotra</h3>
@@ -169,7 +169,7 @@
 
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">SM</span>
+                            <img src="images/shiv.jpeg" alt="shiv" class="board-member__photo">
                         </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Shiv Malhotra</h3>
@@ -180,7 +180,7 @@
 
                     <div class="board-member">
                         <div class="board-member__avatar">
-                            <span class="board-member__initials">RB</span>
+                            <img src="images/ria_barodia.jpeg" alt="ria" class="board-member__photo">
                         </div>
                         <div class="board-member__info">
                             <h3 class="board-member__name">Ria Barodia</h3>
